--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
+    "react-type-animation": "^3.2.0",
     "sonner": "^2.0.6"
   },
   "devDependencies": {
