--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,15 @@
 VITE_SUPABASE_URL=your_supabase_project_url_here
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
+# AI Configuration
+# OpenRouter AI Configuration (Recommended - Free models available)
+VITE_OPENROUTER_API_KEY=your_openrouter_api_key_here
+
+# Alternative: Direct Gemini AI Configuration
+# Get your free Gemini API key from https://makersuite.google.com/app/apikey
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
+
 # Example:
 # VITE_SUPABASE_URL=https://xzyrdiemowvpibwwslhm.supabase.co
 # VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+# VITE_GEMINI_API_KEY=AIzaSyD...
